fix regression test bugs
